--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "pimenta/domain": "dev-master"
     },
     "autoload": {
-        "PSR-4" : {
+         "psr-4": {
             "Pimenta\\LaravelDomain\\" : "src/"
         }
     }
